# Strategy-Pattern

./: CMakeLists.txt  README.md  requirements.txt
data/: runtimes_full.csv  runtimes_mini.csv
src/: main.cpp  produto.h  project.cpp  project.h  search_strategy.cpp  search_strategy.h
tests/: CMakeLists.txt  tests.cpp
timing/: plotting.ipynb  time_measurement.cpp
